--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,18 @@
+<!-- This page is the base to all pages if want to have similar things throughout add to this file. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
+    <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    </nav>
     {% block head%}{%endblock%}
     
+    <!-- Add nav bar to all pages here -->
 </head>
 <body>
     {% block body%}{% endblock %}
