--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
-    <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    </nav>
+
     {% block head%}{%endblock%}
     
     <!-- Add nav bar to all pages here -->
 </head>
 <body>
+    <nav>
+    <a href="{{ url_for('home') }}">Home</a>
+    <a href="{{ url_for('about') }}">About</a>
+    </nav>
     {% block body%}{% endblock %}
 </body>
 </html>
