added page for process

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <nav>
     <a href="{{ url_for('home') }}">Home</a>
     <a href="{{ url_for('about') }}">About</a>
+    <a href="{{ url_for('process') }}">Process</a>
     </nav>
     {% block body%}{% endblock %}
 </body>
